src/App.css
* {
  box-sizing: border-box;
}

/* Helper class */

.txt-center {
  text-align: center;
}

.pos-relative {
  position: relative;
}

.ally-okr {
  padding: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.ally-okr__segment-item {
  list-style: lower-alpha;
  padding-left: 86px;
  padding-bottom: 30px;
  position: relative;
  list-style-position: inside;
  background: linear-gradient(#aeaeae, #aeaeae) 2px 13px/35px 2px no-repeat;
}

.ally-okr__segment>ul {
  padding-left: 0px;
}

.ally-okr__segment-title {
  padding-left: 30px;
  position: relative;
}

.ally-okr__segment-item::before {
  background-image: url('./assets/images/icons/user.png');
  background-size: 20px 20px;
  display: inline-block;
  width: 30px;
  background-repeat: no-repeat;
  height: 30px;
  content: "";
  position: absolute;
  left: 50px;
  top: 3px;
}

.ally-okr__segment-title::before {
  background-image: url('./assets/images/icons/user.png');
  background-size: 20px 20px;
  display: inline-block;
  width: 30px;
  background-repeat: no-repeat;
  height: 30px;
  content: "";
  position: absolute;
  left: -10px;
  top: 3px;
}

.ally-okr__segment {
  padding-left: 0;
  background: linear-gradient(#aeaeae, #aeaeae) no-repeat;
  background-position-y: 50px;
  background-position-x: 0px;
  background-size: 2px calc(100% - 102px);
}

